fix(@clayui/css): LPD-66331 menubar-primary collapse icon should be 14px

--- a/packages/clay-css/src/scss/cadmin/variables/_menubar.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_menubar.scss
@@ -101,9 +101,11 @@ $cadmin-menubar-primary: map-deep-merge(
 				font-weight: $cadmin-font-weight-semi-bold,
 				text-transform: uppercase,
 				collapse-icon-closed: (
+					font-size: 14px,
 					top: calc(22px - (1em / 2)),
 				),
 				collapse-icon-open: (
+					font-size: 14px,
 					top: calc(22px - (1em / 2)),
 				),
 			),
